fix welcome visibility responsive

--- a/Front-End/my-app/src/app/app.component.css
+++ b/Front-End/my-app/src/app/app.component.css
@@ -1,7 +1,6 @@
 .gradient-background {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   min-height: 100vh; 
   background-color: #333; 
