--- a/Front-End/my-app/src/app/welcome/welcome.component.css
+++ b/Front-End/my-app/src/app/welcome/welcome.component.css
@@ -1,12 +1,3 @@
-.gradient-background {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #333; 
-}
-
-
 .table-yellow {
   background-color: #FFEB3B;
   /* Giallo */
